# tetraxis

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: quad.frag
assets/shaders/: mesh.frag  mesh.geom  mesh.vert  post.frag  post.vert  quad.frag  quad.vert
cmake/: SymLinkBin.cmake  dev.tr1ngle.tetraxis.desktop
icons/: icon.ai  iconB.ai
include/: Directory.h  Editor.h  File.h  Framebuffer.h  IMesh.h  InstancedMeshRenderer.h  Math4D.h  Mesh.h  MeshRenderer.h  QuadRenderer.h  SVGRenderer.h  Shader.h  ShaderStorageBuffer.h  TexRenderer.h  Texture.h  basicIncludes.h
libs/libresvg/: CMakeLists.txt
libs/libresvg/windows/x86_64/Debug/: resvg.dll.exp  resvg.dll.lib
libs/libresvg/windows/x86_64/Release/: resvg.dll.exp
src/: Directory.cpp  Editor.cpp  File.cpp  Framebuffer.cpp  InstancedMeshRenderer.cpp  Math4D.cpp  Mesh.cpp  MeshBuilder.cpp  MeshRenderer.cpp  QuadRenderer.cpp  SVGRenderer.cpp  Shader.cpp  ShaderStorageBuffer.cpp  TexRenderer.cpp  Texture.cpp  main.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
